--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1007,27 +1007,36 @@ body {
         bottom: 40px;
         z-index: 5;
         display: flex;
+        align-items: center;
         justify-content: space-between;
         @include rwd(1200) {
-            width: 40%;
+            width: 50%;
             min-width: 450px;
             flex-direction: column;
             padding: 0;
         }
-        @include rwd(500) {
+        @include rwd(550) {
             display: none;
         }
         & > div {
             margin: 10px;
             position: relative;
             pointer-events: auto;
+            &:nth-child(2){
+                width: 55%;
+                max-width: 650px;
+                @include rwd(1200) {
+                    width: 90%;
+                    order: -1;
+                }
+            }
             &.on {
                 visibility: hidden;
                 pointer-events: none;
                 @include rwd(1200) {
                     display: none;
                 }
-            }
+            }   
         }
         .ftEvent_close {
             width: 30px;
@@ -1063,7 +1072,6 @@ body {
         }
     }
 }
-
 
 
 @keyframes pudding {
