--- a/css/all.css
+++ b/css/all.css
@@ -3120,6 +3120,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -3127,7 +3130,7 @@ body {
 
 @media screen and (max-width: 1200px) {
   .footer .ftEvent {
-    width: 40%;
+    width: 50%;
     min-width: 450px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -3137,7 +3140,7 @@ body {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
   .footer .ftEvent {
     display: none;
   }
@@ -3147,6 +3150,20 @@ body {
   margin: 10px;
   position: relative;
   pointer-events: auto;
+}
+
+.footer .ftEvent > div:nth-child(2) {
+  width: 55%;
+  max-width: 650px;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer .ftEvent > div:nth-child(2) {
+    width: 90%;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
 }
 
 .footer .ftEvent > div.on {
