--- a/css/_main.scss
+++ b/css/_main.scss
@@ -40,6 +40,16 @@ body {
         flex-wrap: wrap;
         align-items: flex-end;
         justify-content: space-between;
+        @include rwd(1280) {
+            width: 100%;
+            background-color: #0b2139;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 10;
+            box-shadow: 0 2px 5px #000;
+        }
+
         @include rwd(900) {
             justify-content: center;
         }
