--- a/css/all.css
+++ b/css/all.css
@@ -1682,6 +1682,7 @@ body {
 @media screen and (max-width: 1280px) {
   .header .hd_top {
     width: 100%;
+    padding: 5px 20px 5px 28px;
     background-color: #0b2139;
     position: fixed;
     top: 0;
@@ -1702,7 +1703,7 @@ body {
 
 @media screen and (max-width: 350px) {
   .header .hd_top {
-    padding: 10px;
+    padding: 5px 10px;
   }
 }
 
