--- a/css/_swipeslider.scss
+++ b/css/_swipeslider.scss
@@ -78,14 +78,15 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-}
 
-.sw-next-prev:hover {
-    background-color: rgba(255, 255, 255, 0.74);
-}
-
-.sw-next-prev:active {
-    background-color: rgba(255, 255, 255, 0.5);
+    &:active{
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+    @media (any-hover: hover) {
+        &:hover{
+            background-color: rgba(255, 255, 255, 0.74);
+        }
+    }
 }
 
 .sw-prev {
