--- a/css/all.css
+++ b/css/all.css
@@ -1373,6 +1373,12 @@ body {
   position: relative;
 }
 
+.indexBox {
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+}
+
 .btn_linear_c1, .mbrSelect .btn.on {
   height: 34px;
   line-height: 34px;
