--- a/css/all.css
+++ b/css/all.css
@@ -1326,9 +1326,7 @@ img {
   padding: 10px;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 20;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1338,6 +1336,12 @@ img {
   position: fixed;
   top: 0;
   left: 0;
+}
+
+.warnLog.on {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .warnLog .warnbody {
@@ -2536,7 +2540,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 20;
+    z-index: 50;
     -webkit-transform: translateX(-100%);
             transform: translateX(-100%);
   }
@@ -2552,7 +2556,7 @@ body {
   background: rgba(0, 0, 0, 0.85);
   position: fixed;
   top: 0;
-  z-index: 20;
+  z-index: 50;
 }
 
 @media screen and (max-width: 1280px) {
