--- a/css/all.css
+++ b/css/all.css
@@ -1780,36 +1780,8 @@ input:-webkit-autofill:focus {
           justify-content: flex-end;
 }
 
-.header .hd_top .hd_link .hd_service {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 0 15px 0 5px;
-  font-size: 1.1rem;
-  font-weight: bold;
-}
-
-.header .hd_top .hd_link .hd_service p {
-  margin-left: 5px;
-  position: relative;
-}
-
-.header .hd_top .hd_link .hd_service .btn_cnt {
-  width: 34px;
-  height: 34px;
-}
-
 .header .hd_top .hd_link li + li {
-  margin-left: 8px;
-}
-
-@media screen and (max-width: 350px) {
-  .header .hd_top .hd_link li + li {
-    margin-left: 5px;
-  }
+  margin-left: 5px;
 }
 
 .header .hd_top .hd_link .menuBar,
@@ -1917,16 +1889,6 @@ input:-webkit-autofill:focus {
   }
 }
 
-.header .hd_top .hd_signIn .hd_signInCnt {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  position: relative;
-}
-
 @media screen and (max-width: 1280px) {
   .header .hd_top .hd_signIn .hd_signInCnt {
     width: 100%;
@@ -1935,10 +1897,6 @@ input:-webkit-autofill:focus {
     margin: auto;
     padding: 30px 20px;
     position: relative;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     background: -webkit-gradient(linear, left bottom, left top, from(#091422), to(#0e263c));
     background: linear-gradient(0deg, #091422, #0e263c);
     -webkit-box-shadow: 5px 5px 10px #000;
@@ -1947,6 +1905,32 @@ input:-webkit-autofill:focus {
     -o-border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round;
        border-image: -webkit-gradient(linear, left bottom, left top, from(#f6bf3d), color-stop(#7a5d17), to(#f6bf3d)) 1 1 round;
        border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round;
+  }
+}
+
+.header .hd_top .hd_signIn .hd_signInCnt form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_signIn .hd_signInCnt form {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: unset;
+        -ms-flex-align: unset;
+            align-items: unset;
   }
 }
 
