--- a/css/_main.scss
+++ b/css/_main.scss
@@ -177,7 +177,7 @@ input:-webkit-autofill:focus {
                 @include rwd(1280) {
                     width: 100%;
                     max-width: 779px;
-                    max-height: 90%;
+                    max-height: 95vh;
                     margin: auto;
                     padding: 30px 20px;
                     position: relative;
@@ -194,7 +194,7 @@ input:-webkit-autofill:focus {
                     position: relative;
                     @include rwd(1280){
                         width: 100%;    
-                        max-height: calc(100vh - 180px);           
+                        max-height: calc(100vh - 160px);           
                         flex-direction: column; 
                         align-items: unset;     
                         overflow: auto;      
