--- a/css/_main.scss
+++ b/css/_main.scss
@@ -123,7 +123,7 @@ input:-webkit-autofill:focus {
                 left: 0;
                 z-index: 99;
                 align-items: center;
-                display: none;
+                display: flex;
                 &.on {
                     display: flex;
                     animation: dialogBox 0.5s forwards;
