--- a/css/_main.scss
+++ b/css/_main.scss
@@ -122,10 +122,10 @@ input:-webkit-autofill:focus {
                 top: 0;
                 left: 0;
                 z-index: 99;
-                align-items: center;
-                display: flex;
+                display: none;
                 &.on {
                     display: flex;
+                    justify-content: center;
                     animation: dialogBox 0.5s forwards;
                 }
             }
@@ -177,8 +177,8 @@ input:-webkit-autofill:focus {
                 @include rwd(1280) {
                     width: 100%;
                     max-width: 779px;
-                    max-height: 95vh;
-                    margin: auto;
+                    max-height: 70vh;
+                    // margin: auto;
                     padding: 30px 20px;
                     position: relative;
                     background: linear-gradient(0deg, #091422, #0e263c);
@@ -194,7 +194,7 @@ input:-webkit-autofill:focus {
                     position: relative;
                     @include rwd(1280){
                         width: 100%;    
-                        max-height: calc(100vh - 160px);           
+                        max-height: calc(100vh - 400px);           
                         flex-direction: column; 
                         align-items: unset;     
                         overflow: auto;      
