--- a/css/all.css
+++ b/css/all.css
@@ -1812,17 +1812,15 @@ input:-webkit-autofill:focus {
     top: 0;
     left: 0;
     z-index: 99;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: none;
   }
   .header .hd_top .hd_signIn.on {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-animation: dialogBox 0.5s forwards;
             animation: dialogBox 0.5s forwards;
   }
@@ -1895,8 +1893,7 @@ input:-webkit-autofill:focus {
   .header .hd_top .hd_signIn .hd_signInCnt {
     width: 100%;
     max-width: 779px;
-    max-height: 95vh;
-    margin: auto;
+    max-height: 70vh;
     padding: 30px 20px;
     position: relative;
     background: -webkit-gradient(linear, left bottom, left top, from(#091422), to(#0e263c));
@@ -1926,7 +1923,7 @@ input:-webkit-autofill:focus {
 @media screen and (max-width: 1280px) {
   .header .hd_top .hd_signIn .hd_signInCnt form {
     width: 100%;
-    max-height: calc(100vh - 160px);
+    max-height: calc(100vh - 400px);
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
