--- a/css/all.css
+++ b/css/all.css
@@ -359,17 +359,17 @@ img {
 .dialogBox {
   width: 100%;
   height: 100vh;
-  padding: 0 10px;
+  padding: 10px;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 991;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   display: none;
 }
 
@@ -395,8 +395,7 @@ img {
 .dialog_cnt_01 {
   width: 100%;
   max-width: 779px;
-  max-height: 95%;
-  margin: auto;
+  max-height: 85%;
   padding: 30px 20px;
   position: relative;
   z-index: 2;
@@ -502,7 +501,8 @@ img {
 .dialog_cnt_01 .innerBox {
   width: 100%;
   max-width: 485px;
-  max-height: calc(100vh - 200px);
+  padding-bottom: 20px;
+  max-height: calc(100vh - 250px);
   overflow-y: auto;
   margin: auto;
 }
@@ -775,8 +775,8 @@ img {
 .dialogBox .newGift {
   width: 100%;
   max-width: 700px;
-  position: relative;
   margin: auto;
+  position: relative;
   background-color: #c43f40;
   -webkit-box-shadow: 0 0 30px #cea7a2 inset;
           box-shadow: 0 0 30px #cea7a2 inset;
@@ -792,7 +792,8 @@ img {
   .dialogBox .newGift {
     width: 100%;
     max-width: 370px;
-    max-height: calc(100vh - 10px);
+    margin: unset;
+    max-height: calc(100vh - 90px);
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -800,12 +801,22 @@ img {
     border-radius: 175px 175px 10px 10px;
     padding-top: 5px;
   }
+  .dialogBox .newGift.on {
+    border-radius: 10px;
+  }
+  .dialogBox .newGift.on .roulette {
+    display: none;
+  }
+  .dialogBox .newGift.on .newGift_cnt {
+    height: 100%;
+    padding-top: 45px;
+  }
 }
 
 .dialogBox .newGift .close {
   width: 38px;
   height: 38px;
-  z-index: 1;
+  z-index: 5;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -1701,7 +1712,7 @@ input:-webkit-autofill:focus {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 20;
     -webkit-box-shadow: 0 2px 5px #000;
             box-shadow: 0 2px 5px #000;
   }
@@ -1893,9 +1904,8 @@ input:-webkit-autofill:focus {
   .header .hd_top .hd_signIn .hd_signInCnt {
     width: 100%;
     max-width: 779px;
-    max-height: 95%;
-    padding: 30px 20px;
-    margin: auto;
+    max-height: 85%;
+    padding: 30px 0;
     position: relative;
     background: -webkit-gradient(linear, left bottom, left top, from(#091422), to(#0e263c));
     background: linear-gradient(0deg, #091422, #0e263c);
@@ -1905,6 +1915,14 @@ input:-webkit-autofill:focus {
     -o-border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round;
        border-image: -webkit-gradient(linear, left bottom, left top, from(#f6bf3d), color-stop(#7a5d17), to(#f6bf3d)) 1 1 round;
        border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_signIn .hd_signInCnt .hd_signInCnt_inner {
+    max-height: calc(95vh - 195px);
+    overflow: auto;
+    padding: 0 20px 50px;
   }
 }
 
@@ -1924,7 +1942,6 @@ input:-webkit-autofill:focus {
 @media screen and (max-width: 1280px) {
   .header .hd_top .hd_signIn .hd_signInCnt form {
     width: 100%;
-    max-height: calc(95vh - 120px);
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1932,7 +1949,6 @@ input:-webkit-autofill:focus {
     -webkit-box-align: unset;
         -ms-flex-align: unset;
             align-items: unset;
-    overflow: auto;
   }
 }
 
@@ -2062,23 +2078,22 @@ input:-webkit-autofill:focus {
 
 .header .hd_top .hd_signIn .signIn_on {
   width: 100%;
+}
+
+.header .hd_top .hd_signIn .signIn_on_inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 @media screen and (max-width: 1280px) {
-  .header .hd_top .hd_signIn .signIn_on {
+  .header .hd_top .hd_signIn .signIn_on_inner {
+    padding: 0 20px 50px;
+    max-height: calc(100vh - 180px);
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 1280px) {
-  .header .hd_top .hd_signIn .signIn_on_inner {
-    height: calc(100vh - 180px);
     overflow: auto;
   }
 }
