--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -1,13 +1,14 @@
 .dialogBox {
     width: 100%;
     height: 100vh;
-    padding: 10px;
+    padding: 20px 10px 0;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 991;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
     display: none;
     &.on {
         display: flex;
@@ -104,7 +105,7 @@
             width: 100%;
             max-width: 485px;
             padding-bottom: 20px;
-            max-height: calc(100vh - 250px);
+            max-height: calc(100vh - 300px);
             overflow-y: auto;
             margin: auto;
             &::-webkit-scrollbar {
