--- a/css/_main.scss
+++ b/css/_main.scss
@@ -117,7 +117,7 @@ input:-webkit-autofill:focus {
             @include rwd(1280) {
                 width: 100%;
                 height: 100vh;
-                padding: 10px;
+                padding: 30px 10px 0;
                 position: fixed;
                 top: 0;
                 left: 0;
@@ -125,6 +125,7 @@ input:-webkit-autofill:focus {
                 display: none;
                 &.on {
                     display: flex;
+                    align-items: flex-start;
                     justify-content: center;
                     animation: dialogBox 0.5s forwards;
                 }
@@ -179,7 +180,6 @@ input:-webkit-autofill:focus {
                     max-width: 779px;
                     max-height: 85%;
                     padding: 30px 0;
-                    // margin: auto;
                     position: relative;
                     background: linear-gradient(0deg, #091422, #0e263c);
                     box-shadow: 5px 5px 10px #000;
