--- a/css/all.css
+++ b/css/all.css
@@ -359,7 +359,7 @@ img {
 .dialogBox {
   width: 100%;
   height: 100vh;
-  padding: 10px;
+  padding: 20px 10px 0;
   position: fixed;
   top: 0;
   left: 0;
@@ -370,6 +370,9 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   display: none;
 }
 
@@ -502,7 +505,7 @@ img {
   width: 100%;
   max-width: 485px;
   padding-bottom: 20px;
-  max-height: calc(100vh - 250px);
+  max-height: calc(100vh - 300px);
   overflow-y: auto;
   margin: auto;
 }
@@ -1818,7 +1821,7 @@ input:-webkit-autofill:focus {
   .header .hd_top .hd_signIn {
     width: 100%;
     height: 100vh;
-    padding: 10px;
+    padding: 30px 10px 0;
     position: fixed;
     top: 0;
     left: 0;
@@ -1829,6 +1832,9 @@ input:-webkit-autofill:focus {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
