--- a/css/_main.scss
+++ b/css/_main.scss
@@ -55,7 +55,11 @@ input:-webkit-autofill:focus {
             top: 0;
             left: 0;
             z-index: 20;
-            box-shadow: 0 2px 5px #000;
+            box-shadow: 0 2px 6px #000;
+            transition: .5s;
+            &.hideUp{ 
+                top: -150px;
+            } 
         }
         @include rwd(900) {
             justify-content: center;
@@ -72,8 +76,8 @@ input:-webkit-autofill:focus {
             cursor: pointer;
             @include imgToTxt;
             @include rwd(550) {
-                width: 100%;
-                height: 15vw;
+                width: 280px;
+                height: 50px;
             }
             a {
                 width: 100%;
