--- a/css/all.css
+++ b/css/all.css
@@ -1716,8 +1716,13 @@ input:-webkit-autofill:focus {
     top: 0;
     left: 0;
     z-index: 20;
-    -webkit-box-shadow: 0 2px 5px #000;
-            box-shadow: 0 2px 5px #000;
+    -webkit-box-shadow: 0 2px 6px #000;
+            box-shadow: 0 2px 6px #000;
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
+  .header .hd_top.hideUp {
+    top: -150px;
   }
 }
 
@@ -1749,8 +1754,8 @@ input:-webkit-autofill:focus {
 
 @media screen and (max-width: 550px) {
   .header .hd_top .hd_logo {
-    width: 100%;
-    height: 15vw;
+    width: 280px;
+    height: 50px;
   }
 }
 
