--- a/css/_swipeslider.scss
+++ b/css/_swipeslider.scss
@@ -11,6 +11,11 @@
     @media screen and (min-width: 1920px) {
         height: 350px;
     }
+
+    &.min{
+        height: calc(100vw*0.36);
+    }
+
     @at-root .sw-slides {
         display: block;
         padding: 0;
