--- a/css/_member.scss
+++ b/css/_member.scss
@@ -3,6 +3,13 @@
     background-color: #fff;
     color: #333;
 
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus {
+        box-shadow: 0 0 0 30px #fff inset;
+        -webkit-text-fill-color: #999;
+    }
+
     @at-root .mbrSelect{
         margin-bottom: 20px;
         padding-bottom: 20px;
@@ -77,6 +84,8 @@
         @at-root .mbrl_ipt,.mbrl_date{
             width: 100%;
             height: 40px;
+            padding-left: 5px;
+            line-height: 40px;
             border: 1px solid #cfcfcf;
             border-radius: 5px;
             box-shadow: 2px 2px 4px rgb(192, 192, 192) inset;
@@ -85,7 +94,6 @@
             }
             input{
                 width: 100%;
-                height: 100%;
                 padding: 0 10px;
                 @include fullNone;
                 font-size: 1.2rem;
