--- a/css/all.css
+++ b/css/all.css
@@ -2856,24 +2856,32 @@ input:-webkit-autofill:focus {
   z-index: 10;
 }
 
+@media screen and (max-width: 1490px) {
+  .mainCnt .contBox-full .leftTool,
+  .mainCnt .contBox-full .rightTool {
+    width: 60px;
+  }
+}
+
 .mainCnt .contBox-full .leftTool {
   left: -90px;
 }
 
 .mainCnt .contBox-full .leftTool.on {
+  margin: auto;
   position: fixed;
   top: 60px;
   right: 1273px;
-  margin: auto;
 }
 
 @media screen and (max-width: 1490px) {
   .mainCnt .contBox-full .leftTool, .mainCnt .contBox-full .leftTool.on {
+    width: 60px;
     position: fixed;
-    right: 10px;
-    left: unset;
     top: unset;
-    bottom: 300px;
+    left: unset;
+    right: 10px;
+    bottom: 325px;
   }
 }
 
@@ -2899,10 +2907,10 @@ input:-webkit-autofill:focus {
 @media screen and (max-width: 1490px) {
   .mainCnt .contBox-full .rightTool, .mainCnt .contBox-full .rightTool.on {
     position: fixed;
-    right: 10px;
-    left: unset;
     top: unset;
+    left: unset;
     bottom: 260px;
+    right: 10px;
   }
 }
 
@@ -2921,17 +2929,26 @@ input:-webkit-autofill:focus {
 
 .mainCnt .contBox-full .rightTool .todayGame .god {
   width: 160px;
-  left: -30px;
-  top: 5px;
   cursor: pointer;
   position: relative;
+  top: 20px;
+  left: -30px;
   -webkit-animation: pudding 1s infinite linear;
           animation: pudding 1s infinite linear;
+}
+
+@media screen and (max-width: 1490px) {
+  .mainCnt .contBox-full .rightTool .todayGame .god {
+    width: 100px;
+    top: 8px;
+    left: -20px;
+  }
 }
 
 @media screen and (max-width: 800px) {
   .mainCnt .contBox-full .rightTool .todayGame .god {
     width: 80px;
+    top: 8px;
     left: -13px;
   }
 }
@@ -2955,6 +2972,14 @@ input:-webkit-autofill:focus {
   background-color: #282828;
   border-radius: 50%;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1490px) {
+  .mainCnt .contBox-full .getGift {
+    width: 60px;
+    height: 60px;
+    padding: 15px;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -2983,10 +3008,38 @@ input:-webkit-autofill:focus {
   cursor: pointer;
 }
 
+@media screen and (max-width: 1490px) {
+  .mainCnt .contBox-full .goTop {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .mainCnt .contBox-full .goTop {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+}
+
 .mainCnt .contBox-full .goTop img {
   width: 20px;
   height: 20px;
   margin-right: 5px;
+}
+
+@media screen and (max-width: 1490px) {
+  .mainCnt .contBox-full .goTop img {
+    width: 25px;
+    height: 25px;
+    margin-right: 0;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -2997,12 +3050,14 @@ input:-webkit-autofill:focus {
   }
 }
 
-@media screen and (max-width: 800px) {
-  .mainCnt .contBox-full .goTop {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+@media screen and (max-width: 1490px) {
+  .mainCnt .contBox-full .goTop span {
+    margin-top: 3px;
+    font-size: 0.8rem;
   }
+}
+
+@media screen and (max-width: 800px) {
   .mainCnt .contBox-full .goTop span {
     display: none;
   }
